<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>no.nav.foreldrepenger.autotest</groupId>
    <artifactId>autotest</artifactId>
    <packaging>jar</packaging>
    <version>${revision}${sha1}${changelist}</version>
    <name>FPSAK :: AutoTest</name>

    <properties>
        <java.version>11</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <aspectj.version>1.9.2</aspectj.version>
        <revision>1.0.0</revision>
        <sha1></sha1>
        <vtp.versjon>1.0_20190731154919_e7e8071</vtp.versjon>
        <changelist>-SNAPSHOT</changelist>
    </properties>

    <profiles>
    	<profile>
            <id>spberegning</id>
            <properties>
                <testsTags>spberegning</testsTags>
                <testPackage>no.nav.foreldrepenger.autotest.spberegning.**</testPackage>
            </properties>
        </profile>
        <profile>
            <id>fpoppdrag</id>
            <properties>
                <testsTags>fpoppdrag</testsTags>
                <testPackage>no.nav.foreldrepenger.autotest.fpoppdrag.**</testPackage>
            </properties>
        </profile>
        <profile>
            <id>fpsak</id>
            <properties>
                <includeTestsTags>fpsak</includeTestsTags>
                <excludeTestsTags>test, pending</excludeTestsTags>
                <testPackage>no.nav.foreldrepenger.autotest.**</testPackage>
            </properties>
        </profile>
        <profile>
            <id>svangerskapspenger</id>
            <properties>
                <includeTestsTags>svangerskapspenger</includeTestsTags>
                <excludeTestsTags>test, pending</excludeTestsTags>
                <testPackage>no.nav.foreldrepenger.autotest.**</testPackage>
            </properties>
        </profile>
        <profile>
            <id>utvikling</id>
            <properties>
                <includeTestsTags>utvikling</includeTestsTags>
                <testPackage>no.nav.foreldrepenger.autotest.**</testPackage>
            </properties>
        </profile>
        <profile>
            <id>internal</id>
            <properties>
                <includeTestsTags>internal</includeTestsTags>
                <excludeTestsTags>pending</excludeTestsTags>
                <testPackage>no.nav.foreldrepenger.autotest.internal.**</testPackage>
            </properties>
            <activation>
            	<activeByDefault>true</activeByDefault>
            </activation>
        </profile>
    </profiles>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.0.0-M3</version>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>
                        -Dfile.encoding=UTF-8 -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                    </argLine>
	                <includes>
                        <include>${testPackage}</include>
                    </includes>
                    <groups>${includeTestsTags}</groups>
                    <excludedGroups>${excludeTestsTags}</excludedGroups>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.aspectj</groupId>
                        <artifactId>aspectjweaver</artifactId>
                        <version>${aspectj.version}</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>io.qameta.allure</groupId>
                <artifactId>allure-maven</artifactId>
                <version>2.10.0</version>
                <configuration>
                    <reportDirectory>target/allure-results</reportDirectory>
                    <reportVersion>2.7.0</reportVersion>
                    <allureDownloadUrl>http://maven.adeo.no/nexus/service/local/repositories/m2internal/hendelseContent/no/testhub/allure/2.7.0/allure-2.7.0.zip</allureDownloadUrl>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>UTF-8</encoding>
                    <release>${java.version}</release>
                </configuration>
            </plugin>
        </plugins>
    </build>


    <dependencies>
        <!-- External dependencies -->
    	 <dependency>
		    <groupId>org.junit.jupiter</groupId>
		    <artifactId>junit-jupiter</artifactId>
             <version>5.4.2</version>
         </dependency>
		<dependency>
		    <groupId>org.junit.platform</groupId>
		    <artifactId>junit-platform-launcher</artifactId>
            <version>1.4.2</version>
        </dependency>

		<dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <version>4.5.7</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.9.8</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.module</groupId>
            <artifactId>jackson-module-parameter-names</artifactId>
            <version>2.9.8</version>

        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jdk8</artifactId>
            <version>2.9.8</version>

        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jsr310</artifactId>
            <version>2.9.8</version>
        </dependency>

        <dependency>
            <groupId>io.qameta.allure</groupId>
            <artifactId>allure-junit5</artifactId>
            <version>2.11.0</version>
        </dependency>

        <dependency>
            <groupId>org.jboss</groupId>
            <artifactId>jandex</artifactId>
            <version>2.1.1.Final</version>
        </dependency>

        <!-- VTP prosjektavhengigheter -->
        <dependency>
            <groupId>no.nav.vedtak.fpmock2</groupId>
            <artifactId>testmodell</artifactId>
            <version>${vtp.versjon}</version>
        </dependency>
        <dependency>
            <groupId>no.nav.vedtak.fpmock2</groupId>
            <artifactId>dokumentgenerator</artifactId>
            <version>${vtp.versjon}</version>
        </dependency>
        <dependency>
            <groupId>no.nav.vedtak.fpmock2</groupId>
            <artifactId>core</artifactId>
            <version>${vtp.versjon}</version>
        </dependency>

        <!-- NAV biblioteker -->
        <dependency>
            <groupId>no.nav.foreldrepenger.kontrakter</groupId>
            <artifactId>okonomistotte-v1</artifactId>
            <version>2.0_20180730135256_2912e61</version>
            <classifier>jaxb</classifier>
        </dependency>
        <dependency>
            <groupId>no.nav.foreldrepenger.oppdrag</groupId>
            <artifactId>oppdrag-klient</artifactId>
            <version>1.0_20190110115356_1239f94</version>
            <classifier>jaxb</classifier>
        </dependency>

        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>3.10.0</version>
            <scope>test</scope>
        </dependency>


    </dependencies>
    <distributionManagement>
        <repository>
            <id>repo.adeo.no-releases</id>
            <url>https://repo.adeo.no/repository/maven-releases</url>
        </repository>
        <snapshotRepository>
            <id>repo.adeo.no-snapshots</id>
            <url>https://repo.adeo.no/repository/maven-snapshots</url>
            <uniqueVersion>false</uniqueVersion>
        </snapshotRepository>
    </distributionManagement>
</project>
